--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
 <app-beneficios id="beneficios"></app-beneficios>
 <app-tarifas id="tarifas"></app-tarifas>
 <app-preguntas-frecuentes id="preguntas_frecuentes"></app-preguntas-frecuentes>
-<!--<app-crea-cuenta id="creaCliente"></app-crea-cuenta>-->
+<app-crea-cuenta id="creaCliente"></app-crea-cuenta>
 <app-footer></app-footer>
