--- a/src/app/components/crea-cuenta/crea-cuenta.component.html
+++ b/src/app/components/crea-cuenta/crea-cuenta.component.html
@@ -1,4 +1,4 @@
-<div class="container-cuenta d-none d-sm-block">
+<div *ngIf="!enviroment" class="container-cuenta d-none d-sm-block">
     <div class="row">
         <div class="col-12 text-center">
             <p class="title" style="margin-top: 95px!important;">Crea tu cuenta</p>
